Added article to feature branch

--- a/git-branching-lesson/index.html
+++ b/git-branching-lesson/index.html
@@ -10,6 +10,8 @@
 
 	<h1>hay</h1>
 	<p>this is the greatest site ever made!!!</p>
-
+	<article class="featureBranch">
+		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi consequuntur dicta sequi illum. Quasi natus reiciendis distinctio consequatur incidunt nesciunt.</p>
+	</article>
 </body>
 </html>
